--- a/css and js/style.css
+++ b/css and js/style.css
@@ -1,17 +1,17 @@
 body{
     margin: 0px;
     padding: 0px;
-    background: brown;
+    background: #343a40;
 }
 .box{
     box-shadow: 10px 10px 10px 5px rgba(0,0,0,0.2);
 }
 .container p{
     display: inline-block;
-    color:#f6b319
+    color:#f8f9fa
 }
 .color{
-    color: brown;
+    color: #343a40;
 }
 .del{
     text-align: right;
@@ -27,10 +27,10 @@ img.bike{
     width: 50px;
 }
 #header-nav{
-    background-color: #f6b319;
+    background-color: #f8f9fa;
     border-radius: 0px;
     border:0px;
-    color: brown;
+    color: #343a40;
 }
 .navbar-header h3{
     margin-top: 5px;
@@ -43,11 +43,11 @@ img.bike{
     display: block;
 }
 .navbar-inverse .navbar-toggle, .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover{
-    background-color: brown;
-    border-color: brown;
+    background-color: #343a40;
+    border-color: #343a40;
 }
 .navbar-inverse .navbar-toggle .icon-bar{
-    background-color:#f6b319;
+    background-color:#f8f9fa;
 }
 .slidebox{
     height: 70vh;
@@ -59,37 +59,37 @@ img.bike{
     margin-bottom: 30px;
 }
 .saying{
-    color: #f6b319;
+    color: #f8f9fa;
     margin-bottom: 30px;
 }
 .saying h3{
-    color: #f6b319;
+    color: #f8f9fa;
 }
 .btn{
-    background-color: brown;
-    color:#f6b319;
-    border: brown;
+    background-color: #343a40;
+    color:#f8f9fa;
+    border: #343a40;
     border-radius: 20px;
     padding: 10px 20px;
 }
 .btn:hover{
     background-color: rgba(165, 42, 42, 0.7);
-    color:#f6b319;
+    color:#f8f9fa;
     padding: 10px 30px;
 }
 .btn:focus, .btn:active:focus, .btn.active:focus {
     outline: 0 none;
-    background-color: brown;
-    color: #f6b319;
+    background-color: #343a40;
+    color: #f8f9fa;
 }
 
 .modal-content{
-    background-color: #f6b319;
-    color: brown;
+    background-color: #f8f9fa;
+    color: #343a40;
 }
 .col-md-9{
-    background-color: brown;
-    color: #f6b319;
+    background-color: #343a40;
+    color: #f8f9fa;
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
@@ -100,7 +100,7 @@ img.bike{
     margin-right: 10px;
 }
 .container h2{
-    color:#f6b319;
+    color:#f8f9fa;
 }
 
 
@@ -141,7 +141,7 @@ img.bike{
   
 .flip-card-front {
     background-color: #bbb;
-    color: #f6b319;
+    color: #f8f9fa;
     text-align: center;
 }
 .flip-card-front img{
@@ -151,8 +151,8 @@ img.bike{
 }
   
 .flip-card-back {
-    background-color: #f6b319;
-    color: brown;
+    background-color: #f8f9fa;
+    color: #343a40;
     transform: rotateY(180deg);
 }
 .flip-card-back h3{
@@ -160,12 +160,12 @@ img.bike{
 }
 .flip-card-back p{
     display: block;
-    color:brown;
+    color:#343a40;
 }
 .flip-card-back a{
     text-decoration: none;
-    background-color: brown;
-    color: #f6b319;
+    background-color: #343a40;
+    color: #f8f9fa;
     padding: 10px 20px;
     border-radius: 20px;
 }
@@ -175,12 +175,12 @@ img.bike{
 }
 
 .bg-footer{
-    background-color: #f6b319;
+    background-color: #f8f9fa;
 }
 footer i{
     margin:20px;
     font-size: 30px;
-    color:brown
+    color:#343a40
 }
 img.blur{
     filter: brightness(0.50);
