--- a/css and js/style.css
+++ b/css and js/style.css
@@ -3,6 +3,26 @@ body{
     padding: 0px;
     background: #343a40;
 }
+.justify-content-center{
+    display: flex;
+    align-items: center;
+    margin-left: 40px;
+    color: #ffffff;
+}
+.about_home{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: flex;
+}
+.about_img{
+    width: 775px;
+    height: 700px;
+}
+.about_text{
+    font-size: 18px;
+    margin-right: 30px;
+    font-family: 'Oswald';
+}
 .imgtext{
     position: absolute;
     top: 85%;
@@ -49,11 +69,11 @@ img.bike{
     color: #ffffff;
 }
 .navbar-header h3{
-    transform: translateX(15px) translateY(3px);
+    transform: translateX(50px) translateY(-60px);
     margin-top: 5px;
     margin-left:60px;
     font-family: 'Oswald';
-    font-size: 30px;
+    font-size: 40px;
     color: #dbe0e6;
 }
 .navbar-header img{
@@ -61,6 +81,7 @@ img.bike{
 }
 .nav li i{
     display: block;
+    height: 50px;
 }
 .navbar-inverse .navbar-toggle, .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover{
     background-color: #343a40;
@@ -142,10 +163,7 @@ img.bike{
     margin-left: auto;
     margin-right: auto;
     perspective: 1000px;
-}
-  
-
-  
+} 
 .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
 }
