--- a/Profile.css
+++ b/Profile.css
@@ -1,90 +1,182 @@
-body{
-  background-color: rgb(77, 82, 82);
+/* Import Font Dancing Script */
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+
+* {
+    margin: 0;
 }
 
-#id1{
-  display: flex;
-  justify-content:space-evenly;
+body {
+    background-color: #e8f5ff;
+    font-family: Arial;
+    overflow: hidden;
 }
 
-#id2{
-  align-items: center;
+/* NavbarTop */
+.navbar-top {
+    background-color: #1E252B;
+    color: #31ffe8;
+    box-shadow: 0px 4px 8px 0px grey;
+    height: 70px;
+}
+
+.title {
+    font-family: 'Dancing Script', cursive;
+    padding-top: 15px;
+    position: absolute;
+    left: 45%;
+}
+
+.navbar-top ul {
+    float: right;
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+    padding: 18px 50px 0 40px;
+}
+
+.navbar-top ul li {
+    float: left;
+}
+
+.navbar-top ul li a {
+    color: #333;
+    padding: 14px 16px;
+    text-align: center;
+    text-decoration: none;
 }
 
 
+/* End */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* nav {
-    position: sticky;
-    top: 0;
+/* Sidenav */
+.sidenav {
+    background-color: #62dfe4;
+    color: #333;
+    border-bottom-right-radius: 25px;
+    height: 86%;
     left: 0;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1.5rem 3.5rem;
-    background-color: var(--bg-color);
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-  }
-  body{
-    background-color: black;
-  }
+    overflow-x: hidden;
+    padding-top: 20px;
+    position: absolute;
+    top: 70px;
+    width: 250px;
+}
 
-  nav h1 {
-    color: var(--primary-color);
-  }
-  
-  nav a {
-    color: var(--primary-color);
-    transition: var(--transition);
-  }
-  nav a:hover {
-    color: var(--secondary-color);
-    border-bottom: 2px solid var(--secondary-color);
-  }
-  
-  nav ul {
-    list-style: none;
-    display: flex;
-    gap: 1.9rem;
-  }
-  
-  nav ul li {
-    font-weight: var(--bold-font);
-  }
+.profile {
+    margin-bottom: 20px;
+    margin-top: -12px;
+    text-align: center;
+}
 
-  .burger-menu {
-    color: var(--primary-color);
-    font-size: 2rem;
-    border: 0;
-    background-color: transparent;
-    cursor: pointer;
-    display: none;
-  }
-
-  img{
-    border: 2px solid rgb(126, 255, 126) ;
+.profile img {
     border-radius: 50%;
-  } */
+    box-shadow: 0px 0px 5px 1px grey;
+}
 
+.name {
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 20px;
+}
+
+.job {
+    font-size: 16px;
+    font-weight: bold;
+    padding-top: 10px;
+}
+
+.url, hr {
+    text-align: center;
+}
+
+.url hr {
+    margin-left: 20%;
+    width: 60%;
+}
+
+.url a {
+    color: #818181;
+    display: block;
+    font-size: 20px;
+    margin: 10px 0;
+    padding: 6px 8px;
+    text-decoration: none;
+}
+
+.url a:hover, .url .active {
+    background-color: #e9f5ff;
+    border-radius: 28px;
+    color: #050;
+    margin-left: 14%;
+    width: 65%;
+}
+
+/* End */
+
+/* Main */
+.main {
+    margin-top: 2%;
+    margin-left: 29%;
+    font-size: 28px;
+    padding: 0 10px;
+    width: 58%;
+}
+
+.main h2 {
+    color: #000000;
+    font-family: "Lucida Console", Courier, monospace;
+    font-size: 26px;
+    margin-bottom: 10px;
+}
+.main .card td {
+    color: #acf7ffdd;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+.main .card {
+    background-color: #343a40;
+    border-radius: 18px;
+    box-shadow: 1px 1px 8px 0 #62dfe4;
+    height: auto;
+    margin-bottom: 20px;
+    padding: 20px 0 20px 50px;
+}
+
+.main .card table {
+
+    border: none;
+    font-size: 20;
+    height: auto;
+    width: 80%;
+}
+
+.edit {
+    position: absolute;
+    color: #e7e7e8;
+    right: 14%;
+}
+
+   .divTable
+    {
+        display:  table;
+        width:auto;
+        background-color:#000000;
+        border:1px solid  #fffdfd;
+        border-spacing:5px;/*cellspacing:poor IE support for  this*/
+       /* border-collapse:separate;*/
+    }
+
+    .divRow
+    {
+       display:table-row;
+       width:auto;
+    }
+
+    .divCell
+    {
+        float:left;/*fix for  buggy browsers*/
+        display:table-column;
+        width:200px;
+        background-color:#ccc;
+    }
