--- a/Profile.css
+++ b/Profile.css
@@ -67,7 +67,13 @@
     line-height: 1.5;
     max-width: 100%;
     padding: 1rem 2rem;
+     z-index: 10; 
+    position: relative;
+  display: inline-block;
+  cursor: pointer;
   }
+  
+
   
   @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
     .modal {
@@ -414,5 +420,3 @@
     -webkit-transition: color 0.3s ease;
     transition: color 0.3s ease;
   }
-
-  
