--- a/stalls/items.css
+++ b/stalls/items.css
@@ -36,16 +36,17 @@ body {
   padding-left: 60px;
   display: grid;
   grid-template-columns: 300px 300px 300px;
-  grid-template-rows: 350px 350px;
+  grid-template-rows: 500px 500px;
   column-gap: 50px;
   row-gap: 40px;
   grid-auto-flow: row;
 }
 .wrapper {
   width: 300px;
-  height: 350px;
+  height: 500px;
   background: white;
-  margin: 10px;
+  margin: auto;
+  position: relative;
   overflow: hidden;
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0;
@@ -64,6 +65,9 @@ body {
   height: 80%;
   width: 100%;
   background: url(https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg) no-repeat center center;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
   background-size: 100%;
 }
 .wrapper .container .bottom {
@@ -90,7 +94,7 @@ body {
   float: left;
 }
 .wrapper .container .bottom .left .details {
-  padding: 5px;
+  padding: 20px;
   float: left;
   width: calc(70% - 40px);
 }
@@ -160,8 +164,7 @@ body {
   padding: 30px;
   color: white;
 }
-.wrapper .container .bottom .right:hover .remove,
-.wrapper .container .bottom .right:hover .done {
+.wrapper .container .bottom .right:hover .remove, .wrapper .container .bottom .right:hover .done {
   transform: translateY(-100%);
 }
 .wrapper .inside {
@@ -211,14 +214,12 @@ body {
   text-align: left;
   width: 100%;
 }
-.wrapper .inside .contents h1,
-.wrapper .inside .contents p,
-.wrapper .inside .contents table {
+.wrapper .inside .contents h1, .wrapper .inside .contents p, .wrapper .inside .contents table {
   color: white;
 }
 .wrapper .inside .contents p {
   font-size: 13px;
-}/*# sourceMappingURL=items.css.map */
+}
 
 
 
@@ -543,4 +544,9 @@ a {
   -webkit-transition: color 0.3s ease;
   transition: color 0.3s ease;
 }
+
+
+
+
+
 
