--- a/stalls/items.css
+++ b/stalls/items.css
@@ -107,21 +107,21 @@ body {
   border-left: solid thin rgba(0, 0, 0, 0.1);
 }
 .wrapper .container .bottom .left .buy i {
-  font-size: 15px;
+  font-size: 30px;
   padding: 30px;
   color: #254053;
   transition: transform 0.5s;
 }
 .wrapper .container .bottom .left .buy:hover {
-  background: #a6cdde;
+  background: #A6CDDE;
 }
 .wrapper .container .bottom .left .buy:hover i {
   transform: translateY(5px);
-  color: #00394b;
+  color: #00394B;
 }
 .wrapper .container .bottom .right {
   width: 50%;
-  background: #a6cdde;
+  background: #A6CDDE;
   color: white;
   float: right;
   height: 200%;
@@ -140,7 +140,7 @@ body {
   height: 50%;
 }
 .wrapper .container .bottom .right .done i {
-  font-size: 15px;
+  font-size: 30px;
   padding: 30px;
   color: white;
 }
@@ -149,18 +149,18 @@ body {
   clear: both;
   border-right: solid thin rgba(255, 255, 255, 0.3);
   height: 50%;
-  background: #bc3b59;
+  background: #BC3B59;
   transition: transform 0.5s, background 0.5s;
 }
 .wrapper .container .bottom .right .remove:hover {
-  background: #9b2847;
+  background: #9B2847;
 }
 .wrapper .container .bottom .right .remove:hover i {
   transform: translateY(5px);
 }
 .wrapper .container .bottom .right .remove i {
   transition: transform 0.5s;
-  font-size: 15px;
+  font-size: 30px;
   padding: 30px;
   color: white;
 }
@@ -169,7 +169,7 @@ body {
 }
 .wrapper .inside {
   z-index: 9;
-  background: #92879b;
+  background: #92879B;
   width: 140px;
   height: 140px;
   position: absolute;
@@ -218,7 +218,7 @@ body {
   color: white;
 }
 .wrapper .inside .contents p {
-  font-size: 10px;
+  font-size: 13px;
 }
 
 
