--- a/Profile.css
+++ b/Profile.css
@@ -1,4 +1,23 @@
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 20;
+  cursor: pointer;
+}
 
+.detail_h2{
+  font-size: 30px;
+  background-color: aliceblue;
+  color: #000000;
+  padding: 20px;
+}
 .add_button {
     display: flex;
     justify-content: center;
