--- a/admin/admin_style.css
+++ b/admin/admin_style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&display=swap');
 
 :root {
-   --main-color: #4834d4;
+   --main-color: #f0f0f3;
    --red: #e74c3c;
    --orange: #f39c12;
-   --black: #34495e;
-   --white: #fff;
-   --light-bg: #f5f5f5;
+   --black: #dbedff;
+   --white: #1E252B;
+   --light-bg: #333940;
    --light-color: #999;
    --border: .2rem solid var(--black);
    --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
@@ -209,7 +209,7 @@ section {
 
 .header .flex .logo {
    font-size: 2.5rem;
-   color: var(--black);
+   color: #a4c3e6;
 }
 
 .header .flex .logo span {
