--- a/Profile.css
+++ b/Profile.css
@@ -72,8 +72,8 @@
 
 .detail_h2{
   font-size: 30px;
-  background-color: aliceblue;
-  color: #000000;
+  background-color: #1E252B;
+  color: #ffffff;
   padding: 20px;
 }
 .add_button {
@@ -165,6 +165,8 @@
   
   html,
   body {
+    display: flex;
+    flex-wrap: wrap;
     height: 100%;
     width: 100%;
   }
@@ -493,4 +495,70 @@
     color: rgb(28, 121, 184);
     -webkit-transition: color 0.3s ease;
     transition: color 0.3s ease;
+  }
+/*loading --------------------------------------------------------------------*/
+  .loading {
+    
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #333940;
+    z-index: -1; 
+    opacity: 0;  
+    
+   
+    animation-delay: 0;
+    animation-name: loading;
+    animation-duration: 2.5s;
+    animation-fill-mode: fowards;
+    animation-iteration-count: 1; 
+    animation-timing-function: ease-out;
+    
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+ 
+  .loading .image {
+    width: auto;
+    height: auto;
+    border-radius: 200px;
+    overflow: hidden;
+    
+    animation: rotation 2s linear infinite; 
+    transform-origin: center; 
+  }
+  
+  .loading .image img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+ 
+  @keyframes loading {
+    from {
+      opacity: 1;
+      z-index: 100;
+    }
+    80% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+      z-index: -1;
+    }
+  }
+  
+ 
+  @keyframes rotation {
+    from {
+      transform: rotate(0);
+    }
+    to {
+      transform: rotate(360deg);
+    }
   }
