--- a/css and js/style.css
+++ b/css and js/style.css
@@ -2,6 +2,15 @@ body{
     margin: 0px;
     padding: 0px;
     background: #333940;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+}
+.row{
+    margin-right: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .justify-content-center{
     display: flex;
@@ -38,9 +47,6 @@ body{
     display: inline-flex; /* keep the background color wrapped tight */
     padding:4px;font-size:20px;background-color:rgba(95, 62, 26, 0.585);color:#ffffff;
 }
-#fourth{
- transform: translateX(100%);
-}
 .footer-copyright{
     color: #dbe0e6;
 }
@@ -72,6 +78,9 @@ img.bike{
     border-radius: 0px;
     border:0px;
     color: #ffffff;
+}
+.navbar{
+    width: 100%;
 }
 .navbar-header h3{
     transform: translateX(50px) translateY(-60px);
@@ -249,3 +258,69 @@ img.blur{
         margin-left:0px;
     }
 }
+
+.loading {
+    
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #333940;
+    z-index: -1; 
+    opacity: 0;  
+    
+   
+    animation-delay: 0;
+    animation-name: loading;
+    animation-duration: 2.5s;
+    animation-fill-mode: fowards;
+    animation-iteration-count: 1; 
+    animation-timing-function: ease-out;
+    
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+ 
+  .loading .image {
+    width: auto;
+    height: auto;
+    border-radius: 200px;
+    overflow: hidden;
+    
+    animation: rotation 2s linear infinite; 
+    transform-origin: center; 
+  }
+  
+  .loading .image img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+ 
+  @keyframes loading {
+    from {
+      opacity: 1;
+      z-index: 100;
+    }
+    80% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+      z-index: -1;
+    }
+  }
+  
+ 
+  @keyframes rotation {
+    from {
+      transform: rotate(0);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
