--- a/Developers.css
+++ b/Developers.css
@@ -1,13 +1,14 @@
 .ask_star{
   display: flex;
-  margin: 100px;
+  margin: 80px;
   color: rgb(30, 30, 29);
  flex-direction: column;
  align-items: center;
+ justify-content: space-between;
 }
 .ask_star p{
   font-size: 30px;
-  background-color: #f0f8ff94;
+  background-color: #f0f8ffc4;
 }
 .github-button{
   transform: translateX(10px);
@@ -30,6 +31,7 @@
 .devs {
     margin: 50px;
     display: flex;
+    width: 100%;
     /* grid-template-columns: 260px 260px 260px 260px;
   grid-auto-flow: column; */
   align-content: space-around;
@@ -122,6 +124,9 @@
     width: 100%;
   }
   body {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     background-image: url('img/dev_bg_3.jpg');
     background-position: center center;
     background-size: cover;
@@ -451,3 +456,68 @@
   }
 
   
+  .loading {
+    
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #333940;
+    z-index: -1; 
+    opacity: 0;  
+    
+   
+    animation-delay: 0;
+    animation-name: loading;
+    animation-duration: 1.5s;
+    animation-fill-mode: fowards;
+    animation-iteration-count: 1; 
+    animation-timing-function: ease-out;
+    
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+ 
+  .loading .image {
+    width: auto;
+    height: auto;
+    border-radius: 200px;
+    overflow: hidden;
+    
+    animation: rotation 2s linear infinite; 
+    transform-origin: center; 
+  }
+  
+  .loading .image img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+ 
+  @keyframes loading {
+    from {
+      opacity: 1;
+      z-index: 100;
+    }
+    80% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+      z-index: -1;
+    }
+  }
+  
+ 
+  @keyframes rotation {
+    from {
+      transform: rotate(0);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
